<resources>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="app_name">Bike kNight</string>
    <string name="play">Play</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="friends">Friends</string>
    <string name="addfriend">Add Friend</string>
    <string name="add">Add</string>
    <string name="name">Name:</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="number_of_players">Number of players:</string>
    <string name="from">From</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="max">Max</string>
    <string name="create_new_lobby">Create new lobby</string>
    <string name="games">Games</string>
    <string name="wins">Wins</string>
    <string name="missions">Missions</string>
    <string name="login">Login</string>
    <string name="enter_name">Enter Name</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="button_login">Login</string>
    <string name="button_create_new_account">Create New Account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="button_create">Create</string>
    <string name="create">Create</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_maximum">Max</string>
    <string name="enter_minimum">Min</string>
    <string name="min">Min</string>
    <string name="log_out">Log Out</string>
    <string name="signed_in_as">Signed in as %s</string>
    <string name="no_friends">No friends added up till now.</string>
    <string name="challenge">Challenge</string>

    <string name="define_map">Define Map</string>
    <string name="next">Next</string>
    <string name="start_lobby">Start Lobby</string>
    <string name="choose_centre_press_next">Choose the centre of the map by moving the marker and press Next.</string>
    <string name="mission_type_1" formatted="false">Drive to (%s %s).</string>
    <string name="mission_type_2">Gather with your team.</string>
    <string name="mission_type_3">Drive a height difference of %s m.</string>
    <string name="mission_type_4">Search for light.</string>
    <string name="mission_type_5">Get this speed: %s km/hour.</string>
    <string name="mission_height_difference_text">\'Drive a height difference\': Mission completed!</string>
    <string name="mission_drive_to_text">\'Drive to location\': Mission completed!</string>
    <string name="mission_gather_text">\'Gather with your team\': Mission completed!</string>
    <string name="mission_search_light_text">\'Search for light\': Mission completed!</string>
    <string name="mission_speed_text">\'Get this speed\': Mission completed!</string>

    <string name="send">request sent</string>
    <string name="remove">Remove</string>
    <string name="refresh">refresh</string>

    <!-- Errors defined -->
    <string name="error1">Username and password don\'t match.</string>
    <string name="error2">This username is already in use.</string>
    <string name="error3">Session expired! Please log-in again.</string>
    <string name="error4">This lobby doesn\'t exist!</string>
    <string name="error5">This lobby has reached the maximum amount of players.</string>
    <string name="error6">You are not playing in this game session.</string>
    <string name="error7">Attacker is too far away from you.</string>
    <string name="error8">One of both players doesn\'t have a known location.</string>
    <string name="error9">This feature is reserved for defenders.</string>

    <string name="intro">Bike kNight is a nightgame based on the famous \'Capture the Flag\' game. </string>
    <string name="defenders">Defenders</string>
    <string name="attackers">Attackers</string>
    <string name="text_defenders">Your main purpose is to defend the hidden base.
        The location of this hidden base wil be chosen by the team leader.
        You can defend your base by using the "defend" button when you are near an attacker.
        This wil send the attacker out to the perimeter of the map, which will buy your team some time and the attacker will also lose a life.
        In order to win the game, the defending team will have to accomplish a certain number of challenges.</string>
    <string name="text_attackers">Your main purpose is to find the hidden base of the defending team.
        When you enter the hidden base, you will grab hold of a digital flag.
        In order to win the game, you will have to bring this flag to the perimeter of the map.
        In order to make this a bit more challenging,
        the defending team will be aware of your location whilst holding the flag.
        If a defender kills you while holding the flag, the flag will respawn at the hidden location.
        Each attacker will start with three lives. The attacking team will also be able to accomplish challenges.
        They will be rewarded with special perks if they manage to complete these tasks. The attackers will have access to another feature that will allow them to see the defending team on their maps.
        In order to unlock this feature, you must been standing under a light source.
        Beware, cheating by the use of a flashlight will be detected!    </string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="connect_to_internet_please">Connect to internet please!</string>
    <string name="refresh_data">The data will be automatically refreshed every 30 seconds.</string>
    <string name="lives">Lives:</string>
    <string name="name_minutes_ago" formatted="false">%s (%s minutes ago)</string>
    <string name="previous">Previous</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_conditions_text">Our legal department advised us to implement this button, however, it has no use.</string>
    <string name="rules">Rules</string>
    <string name="remove_friend_text">If you want to remove a friend, press the name until the \'remove\'-button appears.</string>
    <string name="on_hit">Bullseye!</string>
    <string name="game_end">Game ended: The %s are the champions.</string>
    <string name="dead">You have lost all your lives and thereby are out of the game.</string>
    <string name="started">Started</string>
    <string name="friend_removed">Friend removed!</string>
    <string name="friend_added">Friend added!</string>
    <string name="data_not_entered_correctly">Data not entered correctly!</string>
    <string name="name_at_least_three_characters">Name must be at least 3 characters!</string>
    <string name="friend_accepted">Friend accepted!</string>
    <string name="waiting_d_d" formatted="false">Waiting %d / %d</string>
    <string name="challenge_location">Challenge location</string>
    <string name="close_game">Close Game</string>
    <string name="d_seconds">%d seconds</string>
    <string name="game">Game</string>


</resources>
