<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#FFFFFF">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >
    <Button
        android:id="@+id/button_play"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:text="@string/play"
        android:layout_margin="20dp"
        style="@style/ButtonHomeScreenStyle"/>
    <Button
        android:id="@+id/button_scoreboard"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:text="@string/scoreboard"
        android:layout_margin="20dp"
        style="@style/ButtonHomeScreenStyle"/>
    <Button
        android:id="@+id/button_friends"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:text="@string/friends"
        android:layout_margin="20dp"
        style="@style/ButtonHomeScreenStyle"/>

</LinearLayout>
</ScrollView>
</LinearLayout>